Remove skipWaiting, fix chrome overflow bug

--- a/Frontend/reminders/src/main.css
+++ b/Frontend/reminders/src/main.css
@@ -511,7 +511,7 @@ input[type=checkbox] {
     display: inline-block;
     width: 1em;
     height: 1em;
-    margin-left: -0.6em;
+    margin-left: -0.5em;
     margin-right: 0.6em;
     vertical-align: bottom;
     border: 1.5px solid var(--outline);
